[b]Version 0.5.63 (not released yet)[/b]:

(2007-11-20)
 * (Internal change) Added a new list in extensions: multimedia, which
   includes both video and audio extensions.
 * Now "Add directory" in playlist only adds video and audio files (not
   subtitles files, images or any other stuff you may have there).

(2007-11-19)
 * Added patch by redxii, which provide a new icon for file associations
   under Windows.

(2007-11-16)
 * Added a new option in Preferences->General->Audio that allows to change
   the playback speed without altering the pitch (requires at least 
   MPlayer dev-SVN-r24924).
 * Released version 0.5.62. Why not?

(2007-11-15)
 * Fixed a bug in the new code in defaultgui: if you close the program in
   compact mode, then later when quiting compact mode the toolbars don't 
   appear.
 * (Internal change) Now lists for video, audio, subtitles and playlists
   extensions are defined in extensions.h/extensions.cpp.
 * Added the audio types to the associations section in preferences.

(2007-11-13)
 * Simplified the code of defaultgui, using the actions provided by
   the toolbars instead of creating new ones, and removing some old
   code.

(2007-11-12)
 * (Fix) Now changing the volume when the file is paused really keeps
   pause. This is done by not changing the volume immediately but
   scheduling the volume change just after the file plays again.
 * The position and size calculations of the floating widget is now made
   in the floatingwidget code instead of the gui code.
 * Now the floating control shows with an animation! (It can be disabled in 
   the config file).
 * (By user request) Added a new function for the mouse wheel: change playback
   speed.
 
(2007-11-10)
 * (Experimental) New floating control (it looks like the old one) by using the
   new floatingwidget. This time it has an embedded toolbar, so actions are 
   added to it (can't actions be added directly to widgets?). Previously every 